Fix some errors

--- a/src/views/partial/Insert.hbs
+++ b/src/views/partial/Insert.hbs
@@ -56,7 +56,7 @@
               </option>
             {{/each}}
           </select>
-          <a href="/degree/post">
+          <a href="/degree/newTeacher/post">
             <img src="../../img/plus-circle.svg" alt="" />
           </a>
         </div>
