--- a/src/views/partial/teacherInfo.hbs
+++ b/src/views/partial/teacherInfo.hbs
@@ -22,7 +22,7 @@
           <td id="info_email">{{email}}</td>
           <td id="btn">
             <a
-              href="teacher/delete/degree={{degree}}/{{id}}"
+              href="teacher/delete/{{id}}"
               class="btn btn-danger btn-sm"
               role="button"
               title="Eliminar"
