--- a/src/views/partial/UploadFile.hbs
+++ b/src/views/partial/UploadFile.hbs
@@ -5,9 +5,34 @@
     <title>Document</title>
   </head>
   <body>
-    <form action="/files" method="post" enctype="multipart/form-data">
-      <input type="file" name="file" id="" />
-      <input type="submit" value="Enviar" />
-    </form>
+    <div
+      class="container d-flex justify-content-center align-items-center mx-auto px-auto"
+    >
+      <form
+        action="/files"
+        method="post"
+        enctype="multipart/form-data"
+        class=""
+      >
+        <div class="">
+          <div class="">
+            <div class="form-group">
+              <label for="director">Subir pdf del recibo</label>
+              <input
+                type="file"
+                class="form-control"
+                name="file"
+                required="required"
+              />
+              <button
+                class="btn btn-primary"
+                type="button"
+                id="inputGroupFileAddon04"
+              >Enviar</button>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
   </body>
 </html>
