Move file's endpoints to its own file

--- a/src/views/partial/UploadFile.hbs
+++ b/src/views/partial/UploadFile.hbs
@@ -9,7 +9,7 @@
       class="container d-flex justify-content-center align-items-center mx-auto px-auto"
     >
       <form
-        action="/files"
+        action="files/post"
         method="post"
         enctype="multipart/form-data"
         class=""
@@ -26,9 +26,11 @@
               />
               <button
                 class="btn btn-primary"
-                type="button"
+                type="submit"
                 id="inputGroupFileAddon04"
-              >Enviar</button>
+              >
+                Enviar
+              </button>
             </div>
           </div>
         </div>
